<resources>
    <string name="app_name" translatable="false">WIA</string>
    <string name="label_local">WIA</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title">WIA</string>
    <string name="nav_header_subtitle">Where I am</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>

    <string name="sobre_text">
        O Where I am (WIA) é um aplicativo, que tem como principal objetivo indicar a localização dos principais departamentos da UFRN para
        alunos, funcionários e visitantes.
    </string>

    <string name="gabriel_quaresma" translatable="false">Gabriel Quaresma<a href="https://github.com/joaoGabriel55"></a></string>
    <string name="fabio_henrique" translatable="false">Fábio Henrique<a href="https://github.com/fbio1"></a></string>
    <string name="adryel_juliao" translatable="false">Adryel Julião<a href="https://github.com/dryel23"></a></string>
    <string name="todo" translatable="false">TODO</string>
    <string name="email_text">WIA.SAapp@gmail.com</string>
    <string name="contato_desc_text" formatted="true">Caso queira sugerir novas funcionalidades ou atualização de dados para o WIA entre em contato clicando no email abaixo:</string>
    <string name="responsavel">Responsável</string>
    <string name="descricao">Descrição do Local</string>
    <string name="sobre">Sobre</string>
    <string name="contato">Contato</string>
    <string name="info_label">Informações</string>
    <string name="desenvolvedores_do_aplicativo">Desenvolvedores do aplicativo</string>
    <string name="_2018_wia_todos_os_direitos_revervados">© 2018 WIA. Todos os direitos revervados</string>
    <string name="ajuda">Ajuda</string>
</resources>
