<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <!--<group android:checkableBehavior="single">-->
        <!--<item-->
            <!--android:id="@+id/nav_camera"-->
            <!--android:icon="@drawable/ic_menu_camera"-->
            <!--android:title="Import" />-->
        <!--<item-->
            <!--android:id="@+id/nav_gallery"-->
            <!--android:icon="@drawable/ic_menu_gallery"-->
            <!--android:title="Gallery" />-->
        <!--<item-->
            <!--android:id="@+id/nav_slideshow"-->
            <!--android:icon="@drawable/ic_menu_slideshow"-->
            <!--android:title="Slideshow" />-->
        <!--<item-->
            <!--android:id="@+id/nav_manage"-->
            <!--android:icon="@drawable/ic_menu_manage"-->
            <!--android:title="Tools" />-->
    <!--</group>-->

    <item android:title="@string/info_label">
        <menu>
            <item
                android:id="@+id/contato"
                android:icon="@mipmap/ic_feedback"
                android:title="@string/contato" />
            <item
                android:id="@+id/sobre"
                android:icon="@mipmap/ic_info"
                android:title="@string/sobre" />
            <item
                android:id="@+id/ajuda"
                android:visible="false"
                android:icon="@mipmap/ic_ajuda"
                android:title="@string/ajuda" />
        </menu>
    </item>

</menu>
